# AI-World

./: README.md  create_character.py  ideas.MD  main.py  pyproject.toml
assets/: characters.json
assets/characters/: 20250719_223805_anna_petrova.json  20250719_223824_sergey_ivanov.json  anna_petrova.json  sergey_ivanov.json
tests/: test_postprocess.py
