[tool.poetry]
name = "ai-world-simulation"
version = "0.1.0"
description = "Симуляция виртуального мира с AI-персонажами"
authors = ["Stanislav Poryadnyi <sporyadnyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
