[tool.poetry]
name = "ai-world-simulation"
version = "0.1.0"
description = "Симуляция виртуального мира с AI-персонажами"
authors = ["Stanislav Poryadnyi <sporyadnyi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
openai = "^1.97.0"
python-dotenv = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
