[tool.poetry]
name = "ai-world-simulation"
version = "0.1.0"
description = "Симуляция виртуального мира с AI-персонажами"
authors = ["Stanislav Poryadnyi <sporyadnyi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
openai = "^1.97.0"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
